Cards, small fix to prevent letters to be cut off eventhough the card is hovered

--- a/yesticket/ytp-site.css
+++ b/yesticket/ytp-site.css
@@ -349,6 +349,10 @@ a:focus .ytp-event-card-text-wrapper {
 	height: fit-content;
 	z-index: 1;
 }
+a:hover .ytp-event-card-body,
+a:focus .ytp-event-card-body {
+	overflow: visible;
+}
 .ytp-event-card-month {
 	text-transform: uppercase;
 }
